# pythoncourse

./: .gitignore  Makefile  README_sphinx.md  music.db  pyproject.toml
examples/: profiling_example.py  sql_to_pandas_example.py
examples/packages_examples/: 1_yfinance_example.py  2_numpy_example.py  3_matplotlib_example.py  4_pandas_example.py  5_scipy_example.py  6_statsmodels_example.py
examples/portfolio-analytics/: README.md  pyproject.toml
examples/portfolio-analytics/examples/: example_usage.py
examples/portfolio-analytics/portfolio_analytics/: __init__.py  metrics.py
examples/portfolio-analytics/portfolio_analytix/: __init__.py  datafetch.py  metrics.py  optimize.py
examples/portfolio-analytics/tests/: test_datafetch.py  test_metrics.py  test_optimize.py
examples/pytest/: my_app.py  test_autouse.py  test_my_app.py
examples/pytest/mocking/: database.py  email_client.py  test_email_client.py
examples/pytest/monkeypatching/: weather.py
tutorials/: git_exercise.py  tutorial10_notebook.ipynb  tutorial10_notebook_solution.ipynb  tutorial5_notebook.ipynb  tutorial5_notebook_solution.ipynb  tutorial6_notebook.ipynb  tutorial6_notebook_solution.ipynb  tutorial8_notebook.ipynb  tutorial8_notebook_solution.ipynb  tutorial9_notebook.ipynb
tutorials/data/: DAX.csv  SP500_Total_Return.csv  sales_data.txt  weather_sample.csv
tutorials/tutorial5_debugging/: config.py  loader.py  main.py  preprocessing.py  stats.py  summary.py
tutorials/tutorial5_debugging/data/: measurements.csv  participants.csv
