[project]
name = "pythoncourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
