[project]
name = "portfolio_analytix"
version = "0.1.1"
description = "Have Python roast your portfolio! :-)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "requests>=2.30.0",
    "scipy>=1.14.0",
    "yfinance>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
